cli funcionando perfeitamente com as path e options

--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "md-links-laridepaula",
   "version": "0.1.1",
   "description": "Leitor de arquivos markdown, para validar links",
   "main": "index.js",
