--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "md-links-laridepaula",
   "version": "0.1.1",
   "description": "Leitor de arquivos markdown, para validar links",
   "main": "index.js",
@@ -17,13 +17,9 @@
   },
   "author": "laridepaula",
   "dependencies": {
-    "ansi-colors": "^4.1.3",
-    "ansi-regex": "^6.0.1",
     "assert": "^2.0.0",
     "babel": "^6.23.0",
     "chalk": "^1.0.0",
-    "cli-color": "^2.0.3",
-    "commander": "^11.0.0",
     "cross-fetch": "^3.1.8",
     "fetch": "^1.1.0",
     "fs": "^0.0.1-security",
@@ -33,7 +29,6 @@
     "node-fetch": "^3.3.1",
     "path": "^0.12.7",
     "readline": "^1.3.0",
-    "strip-ansi": "^6.0.0",
     "test": "^3.3.0"
   },
   "devDependencies": {
