--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "md-links-laridepaula",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Leitor de arquivos markdown, para validar links",
-  "main": "index.js",
+  "main": "cli.js",
   "engines": {
     "node": ">=16.x"
   },
+  "bin": {
+    "md-links": "./src/cli.js"
+  },
+
   "bootcamp": {
     "createdAt": "2023-06-19T12:25:44.680Z",
     "version": "6.3.0",
