--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links-laridepaula",
+  "name": "md-links-larissadepaula",
   "version": "0.2.0",
   "description": "Leitor de arquivos markdown, para validar links",
   "main": "cli.js",
