--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "node-fetch": "^3.3.1",
     "path": "^0.12.7",
     "readline": "^1.3.0",
-    "test": "^3.3.0"
+    "test": "^3.3.0",
+    "@jest/globals": "^29.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -42,7 +43,8 @@
     "babel-jest": "^29.5.0",
     "eslint": "^8.43.0",
     "eslint-plugin-jest": "^25.3.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jsdom": "^22.1.0"
   },
   "scripts": {
     "pretest": "npm run eslint",
